2001-03-19  Tim Jenness  <timj@jach.hawaii.edu>

	* Xorac.pm: Fix spelling of my name

2001-03-16  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (_add_code_to_recipe): Return "good" status at recipe end

	* Core.pm (orac_print_configuration): Fix $$log_options

2001-02-01  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/CGS4.pm (inout): Use _split_fname and _join_fname

	* Frame/JCMT.pm: Can  use base class inout() method

	* Recipe.pm (_check_obey_status_string): Handle { "mon" } syntax
	for hash key. Make sure that the monolith name is reasonable
	before using delete.

2001-01-26  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (execute): Add status check on return. Print message
	when monolith is bad

	* Inst/Defn.pm: @DIRS_TO_UNLINK has to be updated in the BEGIN
	block else the dir is not removed if oracdr fails to get past all
	the loading.

2001-01-19  Timothy Jenness  <t.jenness@jach.hawaii.edu>

	* Display/KAPVIEW.pm (engine_launch_object): Fix typo in method name

2001-01-18  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/Defn.pm: mkdir needs two args in perl versions < 5.6.0
	Add check for system call status

	* Basic.pm: Had erroneously removed File::Copy

2001-01-11  Timothy Jenness  <t.jenness@jach.hawaii.edu>

	* Display.pm: Delay loading of specific display classes until required

	* Recipe.pm (_check_obey_status_string): Add check for ORAC__BADENG

	* Msg/Task/ADAM.pm: Translate to ORAC__BADENG

	* Constants.pm: Add ORAC__BADENG

2001-01-11  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/Michelle.pm: Now a subclass of CGS4

	* Display/KAPVIEW.pm: Use ORAC::Msg::EngineLaunch

	* Display/P4.pm:  Use ORAC::Msg::EngineLaunch

	* Calib/SCUBA.pm: Use ORAC::Msg::EngineLaunch

	* Convert.pm (new): Use ORAC::Msg::EngineLaunch

2001-01-10  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/SCUBA.pm: Use
	orac_determine_initial_algorithm_engines.

	* Inst/CGS4.pm (start_algorithm_engines): Use
	orac_determine_initial_algorithm_engines.
