@@ -1,5 +1,14 @@
 2001-03-19  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Frame/UFTI.pm: Add ORAC_ header support
+
+	* Frame/UKIRT.pm: Add ORAC_ header support
+
+	* Frame/IRCAM2.pm: Add ORAC_ header support
+
+	* Frame.pm (calc_orac_headers): Add support for ORAC_
+	keywords. Add translate_hdr
+
 	* Xorac.pm: Fix spelling of my name
 
 2001-03-16  Tim Jenness  <timj@jach.hawaii.edu>
